# mboxer

./: .gitignore  GNUmakefile  dune-project  mboxer.opam
app/: dune  mboxer.ml
dev-notes/: parsing.org
lib/: backend.ml  backend.mli  cli.ml  cli.mli  dune  lib.ml  line_feed.ml  line_feed.mli  mboxer.ml  mrmime_query.ml  mrmime_query.mli  query.ml
test/: dune  test_mboxer.ml
